Arreglo de los primeros Bugs